<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    android:id="@+id/bbn_nav_menu"
    app:bbn_badgeColor="#FFFF0000"
    app:bbn_rippleColor="#33ffffff">

    <item
        android:id="@+id/bbn_item1"
        android:color="#FF5252"
        android:icon="@drawable/ic_mail_white_24dp"
        android:enabled="true"
        android:title="@string/menu_communications" />
    <item
        android:id="@+id/bbn_item2"
        android:color="@color/fbutton_color_pomegranate"
        android:icon="@drawable/certification"
        android:title="@string/menu_categories" />
    <item
        android:id="@+id/bbn_item3"
        android:color="#FF9800"
        android:icon="@drawable/ic_person_white_24dp"
        android:enabled="true"
        android:title="@string/menu_profile" />
</menu>