<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_start_app"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/place_autocomplete_prediction_primary_text"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_theater" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:inputType="textCapWords"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/msg_start_app"
        android:textColor="@color/design_default_color_surface"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium"
        android:textSize="15sp" />

    <info.hoang8f.widget.FButton
        android:id="@+id/f_phone_button"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_margin="4dp"
        android:minHeight="80dp"
        android:minWidth="400dp"
        android:paddingLeft="30dp"
        android:paddingRight="20dp"
        android:paddingTop="-5dp"
        android:text="@string/btt_cellphone_reg"
        android:textColor="@color/design_default_color_surface"
        fbutton:cornerRadius="15dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="14sp"
        app:fButtonColor="@color/fbutton_color_pomegranate"
        android:textAllCaps="false"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="6dp" />

    <TextView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/txt_or"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/design_default_color_surface"
        android:background="@drawable/round_texview"/>

    <TextView
        android:id="@+id/txt_or_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/txt_continue_with"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/design_default_color_surface"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginVertical="25dp"
        android:orientation="vertical">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="gone"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/g_button"
            android:layout_width="250dp"
            android:layout_height="52dp"
            android:layout_margin="4dp"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_btn_google_light_normal_ios"
            android:drawablePadding="6dp"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:text="@string/google_logo_sign"
            android:textColor="@color/place_autocomplete_prediction_primary_text"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_medium"
            fbutton:cornerRadius="15dp"
            app:fButtonColor="@color/design_default_color_surface"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="6dp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/f_button"
            android:layout_width="250dp"
            android:layout_height="52dp"
            android:layout_margin="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:drawableLeft="@drawable/facebook_logo"
            android:drawablePadding="24dp"
            android:paddingLeft="15dip"
            android:paddingRight="8dip"
            android:text="@string/facebook_logo"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/design_default_color_surface"
            android:textAllCaps="false"
            fbutton:cornerRadius="15dp"
            app:fButtonColor="@color/facebook_logo"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="6dp" />

    </LinearLayout>

</LinearLayout>